# Waraq

./: .gitignore  API_KEYS.md  CANON_TRACKER.md  CLAUDE.md  HANDOFF_2026-05-17_UI_AND_OCR_EXPORT.md  Latest_plan.md  MILESTONES.md  README.md  TEST_PLAN.md  WORKLOG.md  handover.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_projects_pages_blocks_segments.py  0002_events_revisions_decisions_logs.py  0003_provenance_jobs_checkpoints_concepts.py  0004_jobs_state_check_constraint.py  0005_checkpoints_clock_timestamp.py  0006_accounts_table_and_fks.py  0007_ocr_error_instances_and_pages_ocr_status.py  0008_concept_binding_columns.py  0009_conflict_instances_table.py  0010_entities_table.py  0011_konsistenz_befunde_table.py  0012_ocr_error_class_f_06_qr.py  0013_promotion_observations_and_musterkandidaten.py  0014_ocr_export_event_and_related_attempt_id.py  0015_audit_befunde_and_stilregel.py  0016_sprint4_consistency_preflight_hadith.py  0017_phase2a_hadith_data_model.py  0018_phase2d_ar_referenzbestand.py  0019_phase2b_quran_translation_fallback.py  0020_phase2f_a_project_quran_passages.py  0021_phase2e_shamela_corpus.py  0022_phase3f_notifications.py  0023_block_segment_uniqueness.py  0024_block_class_and_layout.py  0025_shamela_skeleton_trgm_index.py  0026_account_admission_gate.py  0027_notification_metadata.py  0028_ocr_attention_issue_lifecycle.py
backend/data/tanzil/: quran-uthmani.txt
backend/scripts/: ensure_camel_data.py  fetch_openiti.py  ingest_shamela.py  ingest_tanzil_quran.py  install_local_fonts.sh  sync_quranenc.py  translate_book_subset.py
backend/tests/: conftest.py
backend/tests/admission/: test_admission_service.py
backend/tests/api/: _m4_fixtures.py  conftest.py  test_admissions_routes.py  test_auth_routes.py  test_glossary_entities_routes.py  test_hadith_router.py  test_health.py  test_lock_routes.py  test_manual_edit_normalize.py  test_morphology_admin_routes.py  test_ocr_auto_run_routes.py  test_ocr_export_routes.py  test_ocr_review_history_routes.py  test_pages_segments_routes.py  test_projects_routes.py  test_release_gate_translation_routes.py  test_ui_e2e_routes.py  test_uploads_routes.py
backend/tests/audit/: _helpers.py  test_audit_befund.py  test_audit_rules.py  test_c_01_glossary_lookup.py
backend/tests/audit_dashboard/: test_service.py
backend/tests/auth/: test_passwords.py  test_service.py  test_tokens.py
backend/tests/canon_rules/: test_canon_rules.py  test_pre_export_verifier.py  test_religious_formula_verifier.py
backend/tests/conflicts/: test_conflict_instance.py
backend/tests/consistency/: test_consistency_engine.py  test_k_rules_real.py
backend/tests/decisions/: test_create_decision_event.py
backend/tests/difficulty/: test_difficulty.py
backend/tests/e2e/: _make_sample_pdf.py  test_e2e_real_document.py
backend/tests/entities/: test_entity_service.py
backend/tests/eventing/: test_log_event.py
backend/tests/export/: _helpers.py  test_canon_rule_export_gate.py  test_download_endpoint.py  test_export_atomicity_and_snapshots.py  test_export_gate_mode_and_format.py  test_pdf_print.py
backend/tests/glossary/: test_glossary_service.py
backend/tests/guided_review/: test_guided_review.py
backend/tests/hadith/: test_aggregation.py  test_citation.py  test_consensus.py  test_data_model.py  test_dorar_client.py  test_full_verification.py  test_orchestrator.py  test_sunnah_client.py  test_vocalization.py  test_vocalization_morphology_refine.py
backend/tests/history/: test_history_queries.py
backend/tests/identity/: test_uuid_service.py
backend/tests/invariant/: test_guard_h1_h2.py  test_guard_h4.py  test_guard_h6.py  test_guard_h7.py
backend/tests/jobs/: test_checkpoints.py  test_state_machine.py
backend/tests/lineage/: test_lineage_one_to_one_and_inactivation.py  test_lineage_split_merge_reactivation.py
backend/tests/lock/: test_lock_service.py
backend/tests/notifications/: test_notifications.py
backend/tests/ocr/: test_auto_run_service.py  test_cloud_vision_adapter.py  test_confidence_and_preprocessing.py  test_error_profiling.py  test_homoglyph_dictionary_corrector.py  test_kraken_adapter.py  test_layout_detection.py  test_layout_opencv.py  test_multi_block_persistence.py  test_ocr_baseline.py  test_ocr_with_segment.py  test_postprocess.py  test_preprocessing_opencv.py  test_review_status.py  test_stage2_routing_and_consensus.py  test_stage3_aggregator.py  test_stage3_ai.py  test_stage3_ai_production.py  test_stage3_rules.py  test_stage3_statistical.py  test_stage4_5_quality.py
backend/tests/ocr_export/: test_ocr_export.py
backend/tests/preflight/: _helpers.py  test_guard_near.py  test_pdf_format_choice.py  test_pflichtfragen_schemas.py  test_preflight_konfiguration_and_p_gates.py  test_preflight_w_gates_and_hadith.py
backend/tests/promotion/: test_promotion.py  test_promotion_stufe3.py
backend/tests/provenance/: test_create_po.py
backend/tests/quran/: test_arabic_skeleton.py  test_citation.py  test_lookup.py  test_project_passages.py  test_quranenc_client.py  test_recognition.py  test_tanzil_ingest.py  test_translation_sync_and_lookup.py
backend/tests/readout/: _helpers.py  test_readout_page_project_endpoints.py  test_readout_segment.py
backend/tests/release_gate/: test_release_gate.py
backend/tests/revision/: test_create_revision.py
backend/tests/rule_binding/: test_rule_binding.py
backend/tests/schemas/: test_events.py  test_projects.py  test_provenance.py
backend/tests/shamela/: test_ingest.py  test_lookup_and_adapter.py  test_openiti_markdown.py  test_registry.py
backend/tests/toc/: test_toc.py
backend/tests/translation/: test_chunk_context.py  test_cross_check.py  test_cross_check_classifier.py  test_first_occurrence.py  test_glossary_check.py  test_line_protocol.py  test_protected_passages.py  test_translation_job.py  test_translation_persistence.py  (+2 more)
backend/waraq/: arabic.py  style_profile.py  text_state.py  translation_styles.py
backend/waraq/api/: main.py  (+4 more)
(+357 files in other folders)
