[project]
name = "waraq"
version = "0.1.0"
description = "Waraq translation platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.17",
    "pypdf>=5.1",
    "google-genai>=1.0",
    "python-docx>=1.1",
    "openai>=2.0",
    # Phase 4 sub-batch B' — Stage-3 rule-based + multi-engine OCR.
    # CAMeL Tools is the canonical morphology library (decided
    # 2026-05-06); pulls torch CPU + transformers + tokenizers (~5 GB
    # venv overhead) but enables §4.16.7 V-1↔V-2 refinement, §4.17
    # untracked-term detection, and Stage-3 rule-based grammar checks.
    "camel-tools>=1.5",
    # Lightweight Arabic-grammar tashkeel checker. Used in Stage-3
    # rule-based consensus alongside CAMeL.
    "mishkal>=0.4",
    # Google Cloud Vision DOCUMENT_TEXT_DETECTION as the §3.4 Stage-2
    # second OCR engine alongside Gemini. Runtime use is gated on
    # GOOGLE_APPLICATION_CREDENTIALS being configured.
    "google-cloud-vision>=3.7",
    # OpenCV adaptive preprocessing primitives behind the §3.3
    # preprocessing harness. Headless build = no GUI deps.
    "opencv-python-headless>=4.10",
    # Phase 5 sub-batch K-1 — HEIC/HEIF image format support. Registers
    # a HEIF opener with PIL so `Image.open(...)` handles `.heic` like
    # any other format. JPEG/PNG/TIFF/WEBP are native to Pillow.
    "pillow-heif>=0.18",
    # Phase 5 sub-batch K-2 — ODT (OpenDocument Text) reader. DOCX is
    # already covered by `python-docx` (read + write share the lib).
    # TXT / XML / HTML are stdlib-only.
    "odfpy>=1.4",
    # Phase 5 sub-batch K-3 — e-book formats. `ebooklib` handles EPUB
    # (ZIP-of-XHTML); `mobi` handles MOBI / AZW / AZW3 (Amazon Kindle
    # non-DRM). DjVu uses the `ddjvu` / `djvused` system tools from
    # `djvulibre-bin` — adapter is wired here, system install is a
    # deployment concern (mirrors the `pdftoppm` / `poppler-utils`
    # pattern for PDF rasterize).
    "ebooklib>=0.18",
    "mobi>=0.3",
    # Phase 5 sub-batch K-4 — archive formats. `zipfile` (stdlib)
    # handles ZIP/CBZ. `rarfile` handles RAR/CBR — it requires the
    # `unrar` system binary on PATH (`apt install unrar`). Adapter
    # wired; system install activates RAR uploads (same pattern as
    # djvulibre-bin / poppler-utils).
    "rarfile>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "factory-boy>=3.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-jose>=3.3",
    "pre-commit>=4.0",
    # E2E fixture generation only — Arabic-shaped PDF rendering.
    "Pillow>=11.0",
    "arabic-reshaper>=3.0",
    "python-bidi>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["waraq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "h1: T-H1 tests (lock-flag protection)",
    "h2: T-H2 tests (lock-flag protection level 2)",
    "h4: T-H4 tests (no revision-UUID for check operations)",
    "h5: T-H5 tests (UUID immutability)",
    "h6: T-H6 tests (no silent conflict resolution)",
    "h7: T-H7 tests (no auto-promotion to Stilregel)",
    "live_api: tests that hit a real external API (skipped unless explicitly enabled)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# E501: long lines tolerated. N818: GuardViolation matches canonical "Guard-Verletzung".
# RUF001/002/003: ʾ (Arabic-transliteration hamza) is canonical in the user's
# domain (classical Arabic / Islamic-text translation); not ambiguous here.
ignore = ["E501", "N818", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N801"]  # test class names trace canonical T-* IDs from DBB
"waraq/api/routers/**/*.py" = ["B008"]  # FastAPI uses Depends/File/Form in defaults idiomatically

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

# camel-tools is an optional install (M4 morphology popover). We import
# it lazily inside try/except and surface a typed error when absent;
# mypy shouldn't fail when the package isn't on disk.
[[tool.mypy.overrides]]
module = ["camel_tools.*"]
ignore_missing_imports = true

# kraken is an optional install (Phase 4 §3.3 manuscript reading line,
# project-flag gated). Same lazy-import pattern as camel-tools.
[[tool.mypy.overrides]]
module = ["kraken", "kraken.*"]
ignore_missing_imports = true

# odfpy (Phase 5 K-2 ODT reader) and pillow_heif (K-1 HEIC opener) ship
# without py.typed markers. We import them inside try/except and stay
# typed at the boundary. K-3 adds ebooklib (EPUB) and mobi (MOBI/AZW/AZW3).
# K-4 adds rarfile (RAR/CBR; needs unrar system binary).
[[tool.mypy.overrides]]
module = [
    "odf",
    "odf.*",
    "pillow_heif",
    "pillow_heif.*",
    "ebooklib",
    "ebooklib.*",
    "mobi",
    "mobi.*",
    "rarfile",
    "rarfile.*",
]
ignore_missing_imports = true
